5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_1576.log
== TEST (2019-05-22 17:42:05) 
-- CODE:
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0
while(i<a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:42:19) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0
while(i<a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:44:25) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0
while(i<=a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:44:35) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0
while(i<=a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:44:52) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0
while(i<=a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:45:18) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
EU=0
BA=0

while(i<=a):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:46:36) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
s=0
EU=0
BA=0

while(i<=a):
	i=i+1
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:46:50) 
-- CODE:
from numpy import*
a=array(eval(input("Eusapia")))
b=array(eval(input("Barsanulfo")))
i=0
s=0
EU=0
BA=0

while(i<=a):
	i=i+1
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:47:52) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<=a):
	i=i+1
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:47:53) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<=a):
	i=i+1
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:50:01) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<size(a)):
	i=i+1
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:53:58) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<size(a)):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(EU)
print(BA)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:57:19) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<size(a)):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(i)

if(EU>BA):
	print("EUSAPIA")
elif(BA>EU):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:57:36) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
s=0
EU=0
BA=0

while(i<size(a)):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(i)

if(EU>BA):
	print("EUSAPIA")
elif(BA>EU):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.513609
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:57:51) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))
i=0
EU=0
BA=0

while(i<size(a)):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(i)

if(EU>BA):
	print("EUSAPIA")
elif(BA>EU):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:57:55) 
-- CODE:
from numpy import*
a=array(eval(input("")))
b=array(eval(input("")))

i=0
EU=0
BA=0

while(i<size(a)):
	if(a[i]==11 and b[i]==11 or a[i]==22 and b[i]==22 or a[i]==33 and b[i]==33):
		EU=EU+0
		BA=BA+0
	elif(a[i]==11 and b[i]==33 or a[i]==22 and b[i]==11 or a[i]==33 and b[i]==22):
		EU=EU+1
		BA=BA+0
	elif(b[i]==11 and a[i]==33 or b[i]==22 and a[i]==11 or b[i]==33 and a[i]==22):
		EU=EU+0
		BA=BA+1
	i=i+1
print(i)

if(EU>BA):
	print("EUSAPIA")
elif(BA>EU):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
